css alignment fix

--- a/api-rest-jwt/frontend/comment.css
+++ b/api-rest-jwt/frontend/comment.css
@@ -20,5 +20,6 @@ hr {
 }
 
 .container {
-    
+    display: grid;
+    place-items: center;
 }
